<resources>
    <string name="app_name">Campus Navigation EAH Jena</string>
    <string name="title_scanner_activity">Scanner</string>
    <string name="title_navigation_activity">Navigation</string>
    <string name="text_view_by_room">Select room:</string>
    <string name="text_view_by_name">Select person:</string>
    <string name="text_view_button_start_location">Enter your position:</string>
    <string name="action_language">Language</string>
    <string name="select_from_spinner">Please select</string>
    <string name="building_03_02_01_floor_ug">House 3, 2 and 1: basement</string>
    <string name="building_03_02_01_floor_00">House 3, 2 and 1: ground floor</string>
    <string name="building_03_02_01_floor_01">House 3, 2 and 1: 1st floor</string>
    <string name="building_03_02_01_floor_02">House 3, 2 and 1: 2nd floor</string>
    <string name="building_03_02_01_floor_03">House 3, 2 and 1: 3rd floor</string>
    <string name="building_03_02_01_floor_04">House 3, 2 and 1: 4th floor </string>
    <string name="building_04_floor_ug">House 4: basement</string>
    <string name="building_04_floor_00">House 4: ground floor</string>
    <string name="building_04_floor_01">House 4: 1st floor</string>
    <string name="building_04_floor_02">House 4: 2nd floor</string>
    <string name="building_04_floor_03">House 4: 3rd floor</string>
    <string name="building_05_floor_ug">House 5: basement</string>
    <string name="building_05_floor_00">House 5: ground floor</string>
    <string name="building_05_floor_01">House 5: 1st floor</string>
    <string name="building_05_floor_02">House 5: 2nd floor</string>
    <string name="building_05_floor_03">House 5: 3rd floor</string>
    <string name="button_location_text">Search</string>
    <string name="hint_search_room">03.03.33</string>
    <string name="error_message_room_input">Room not found!</string>
    <string name="text_view_button_destination_location">Enter your destination:</string>
    <string name="button_location_qr">QR-Code</string>
    <string name="text_view_search_or_qr">or</string>
    <string name="text_view_explanation_location_title">"Find own position:\n"</string>
    <string name="text_view_explanation_location_description_code">"QR-Code: Press the QR-Code button.\n"</string>
    <string name="text_view_explanation_location_description_user">"User input: Enter your position (room number) and press the search button.\n\n"</string>
    <string name="text_view_explanation_navigation_title">"Perform navigation:\n"</string>
    <string name="text_view_explanation_navigation_description_code">"QR-Code: Select a room or person and press the QR-Code button.\n"</string>
    <string name="text_view_explanation_navigation_description_user">User input: Select a room or person or enter your destination (room number), enter your location (room number) and press the search button\n.</string>
    <string name="text_view_explanation_navigation_description_user_code">User input and QR-Code: Enter your destination (room number) and press the QR-Code button.</string>
</resources>
